# gradient-mesh-tools

./: .clang-format  .gitignore  CMakeLists.txt
include/: control-point.hpp  curve-matrix.hpp  draggable.hpp  gradient-mesh.hpp  half-edge.hpp  handle.hpp  hermite.hpp  interpolant.hpp  interval.hpp  merge-options.hpp  patch-matrix.hpp  patch.hpp  quad.hpp  slot-map.hpp  snapping.hpp  storage.hpp  tessellation.hpp  vector2.hpp  vector3.hpp
include/gmt/: control-point.hpp  gradient-mesh.hpp  half-edge.hpp  handle.hpp  interval.hpp  merge-options.hpp  patch.hpp  slot-map.hpp  snapping.hpp  storage.hpp  tessellation.hpp
include/gmt/hermite/: curve-matrix.hpp  hermite.hpp  interpolant.hpp  patch-matrix.hpp  vector2.hpp  vector3.hpp
include/hermite/: curve-matrix.hpp  hermite.hpp  interpolant.hpp  vector2.hpp  vector3.hpp
src/: curve-matrix.cpp  decompose.py  draggable.cpp  extrude.cpp  gradient-mesh.cpp  half-edge.cpp  hermite.cpp  interpolant.cpp  io.cpp  merge-conditions.cpp  merging.cpp  patch-matrix.cpp  splitting.cpp  tessellation.cpp  vector2.cpp  vector3.cpp
src/gmt/: decompose.cpp  extrude.cpp  gradient-mesh.cpp  half-edge.cpp  io.cpp  merge-conditions.cpp  merging.cpp  splitting.cpp  tessellation.cpp
src/gmt/hermite/: curve-matrix.cpp  hermite.cpp  interpolant.cpp  patch-matrix.cpp  vector2.cpp  vector3.cpp
src/hermite/: curve-matrix.cpp  hermite.cpp  interpolant.cpp  patch-matrix.cpp  vector2.cpp  vector3.cpp
tests/: CMakeLists.txt  gradient-mesh.cpp  hermite.cpp  slot-map.cpp
